k8s/laravel-service.yml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app-service
spec:
  selector:
    app: laravel-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: laravel-mysql-service
spec:
  selector:
    app: laravel-mysql
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
